[metadata]
name = dnrm
version = 0.1.0
summary = Dynamic Network Resources Manager
description-file =
    README.rst
author = Mirantis, Inc.
author-email = support@mirantis.com
home-page = http://mirantis.com/
classifier =
    Environment :: DNRM
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    dnrm
data_files =
    etc/dnrm =
        etc/dnrm.conf
	etc/api-paste.ini
scripts =
    bin/dnrm-server

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/
